--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
   <div id="modal-root"></div>
   <div id="mypage-modal"></div>
   <div id="mypage-remove-alert"></div>
+  <div id="mypage-password-alert"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
